[#9926] add confirm to UiAction

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -394,6 +394,9 @@ components:
           $ref: '#/components/schemas/UiActionInputType'
         submit:
           type: boolean
+        confirm:
+          type: boolean
+          default: false
     UiActionInputType:
       type: string
       default: none
