[#9993] add params to UiAction

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -397,6 +397,11 @@ components:
         confirm:
           type: boolean
           default: false
+        params:
+          description: |
+            Additional parameters for executing the UI action. 
+          type: object
+          additionalProperties: true
     UiActionInputType:
       type: string
       default: none
