[#10098] closeView now opens previously closed view if it was present
This functionality is only active on ViewType#NORMAL. These views
typically didn't use closeView. Now this can be used to logically go
back in view history. Root level view doesn't have a history, so if we
want to have an application level history, root view should not change.

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -180,7 +180,7 @@ components:
             $ref: '#/components/schemas/ViewData'
     View:
       type: object
-      required: [uuid,viewName,state,type,parameters]
+      required: [uuid,viewName,state,type,parameters,closedChildrenViews]
       properties:
         uuid:
           type: string
@@ -208,6 +208,10 @@ components:
           type: object
         constraint:
           $ref: '#/components/schemas/ViewConstraint'
+        closedChildrenViews:
+          type: array
+          items:
+            $ref: '#/components/schemas/View'
     ViewData:
       type: object
       required: [uuid,viewName,state,type,parameters]
