--- a/api-domain/src/main/resources/descriptors/filterexpression-api.yaml
+++ b/api-domain/src/main/resources/descriptors/filterexpression-api.yaml
@@ -72,6 +72,7 @@ components:
 
     FilterExpressionFieldList:
       type: object
+      required: [filters]
       properties:
         id:
           type: string
