--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -10,7 +10,97 @@ info:
 tags:
   - name: Grid
     description: Grid
-paths: {}
+paths:
+  /grid/{uuid}/{gridIdentifier}/load:
+    post:
+      tags:
+      - grid
+      summary: ''
+      operationId: 'load'
+      parameters: 
+        - in: path
+          name: uuid
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - in: path
+          name: gridIdentifier
+          schema:
+            type: string
+          required: true
+          description: ''
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GridModel'
+  /grid/{uuid}/{gridIdentifier}/page/{offset}/{limit}:
+    post:
+      tags:
+      - grid
+      summary: ''
+      operationId: 'setPage'
+      parameters: 
+        - in: path
+          name: uuid
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - in: path
+          name: gridIdentifier
+          schema:
+            type: string
+          required: true
+          description: ''
+        - in: path
+          name: offset
+          schema:
+            type: string
+          required: true
+          description: ''
+        - in: path
+          name: limit
+          schema:
+            type: string
+          required: true
+          description: ''
+      responses:
+        '200':
+          description: ''
+  /grid/{uuid}/{gridIdentifier}/performAction/{actionIdentifier}:
+    post:
+      tags:
+      - grid
+      summary: ''
+      operationId: 'performAction'
+      parameters: 
+        - in: path
+          name: uuid
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - in: path
+          name: gridIdentifier
+          schema:
+            type: string
+          required: true
+          description: ''
+        - in: path
+          name: actionIdentifier
+          schema:
+            type: string
+          required: true
+          description: ''
+      responses:
+        '200':
+          description: 'OK'
+        '404':
+          description: 'NOK'
 components:
   schemas:
     GridDataAccessConfig:
