--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -128,6 +128,9 @@ components:
         This object respresent the model of a grid component.
       required: [viewOptions, page]
       properties:
+        viewUuid:
+          type: string
+          format: uuid
         availableViews:
           type: array
           items:
