--- a/sql/build.gradle
+++ b/sql/build.gradle
@@ -1,7 +1,12 @@
+plugins {
+    id 'java-test-fixtures'
+}
+
 dependencies {
 	api project(':api')
 	api 'org.springframework:spring-jdbc'
 	
 	testImplementation 'com.h2database:h2:1.4.200'
+    testImplementation testFixtures(project(':api'))
 
 }
