--- a/ui-api-srv-rest/build.gradle
+++ b/ui-api-srv-rest/build.gradle
@@ -11,6 +11,7 @@ dependencies {
 	api 'javax.servlet:javax.servlet-api:4.0.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation testFixtures(project(':api'))
 }
 
 smartbit4all {
