[#10221] add pageSizeOptions to GridModel

--- a/api-domain/src/main/resources/descriptors/grid-api.yaml
+++ b/api-domain/src/main/resources/descriptors/grid-api.yaml
@@ -147,6 +147,11 @@ components:
         pageSize:
           type: integer
           format: int32
+        pageSizeOptions:
+          type: array
+          items:
+            type: integer
+            format: int32
     GridPage:
       type: object
       description: |
