--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -16,6 +16,45 @@ tags:
 paths: {}
 components:
   schemas:
+    ObjectDefinitionData:
+      type: object
+      description: |
+        The object definition can be defined by some API definition language like OpenApi or so. On the backend the result is java class that describes all
+        the properties and contained object definitions also.
+      required: [uri, properties]
+      properties:
+        uri:
+          type: string
+          format: uri
+          description: |
+            The storage identifier of the given definition. It is calculated by the qualified name of the object. For example 
+            object:/com/smartbit4all/mydomain/model/MyObject could be a calculated URI for a given reference. The object definition
+        qualifiedName:
+          type: string
+        properties:
+          type: array
+          items:
+            $ref: '#/components/schemas/PropertyDefinitionData'
+    PropertyDefinitionData:
+      type: object
+      description: |
+        The property definition can be defined by some API definition language like OpenApi or so. On the backend the result is java class that describes all
+        the properties and contained object definitions also. This definition is responsible for the properties.
+      properties:
+        uri:
+          type: string
+          format: uri
+          description: |
+            The storage identifier of the given definition. It is calculated by the qualified name of the object. For example 
+            object:/com/smartbit4all/mydomain/model/MyObject/firstProperty could be a calculated URI for a given reference.
+        name:
+          type: string
+          description: The property name.
+        typeClass:
+          type: string
+          description: |
+            The qualified name of the type class in java. Like java.lang.String If we need to convert this type to any other platform then
+            we need a conversion for this.
     ReferenceDefinitionData:
       type: object
       description: |
