--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -21,6 +21,8 @@ smartbit4all {
     	"UiAction": "org.smartbit4all.api.view.bean.UiAction",
   		"Value": "org.smartbit4all.api.value.bean.Value",
   		"FilterExpressionOrderBy": "org.smartbit4all.api.filterexpression.bean.FilterExpressionOrderBy",
+  		"FilterExpressionBuilderModel": "org.smartbit4all.api.filterexpression.bean.FilterExpressionBuilderModel",
+  		"PropertyDefinitionData": "org.smartbit4all.api.object.bean.PropertyDefinitionData",
   	]
   }
 }
