--- a/api-domain/src/main/resources/descriptors/value-api.yaml
+++ b/api-domain/src/main/resources/descriptors/value-api.yaml
@@ -143,13 +143,16 @@ components:
             $ref: '#/components/schemas/ValueSetOperand'          
     ValueSetOperand:
       type: object
-      required: [kind, qualifiedName]
+      required: [namespace, name]
       properties:
-        uri:
+        namespace:
           type: string
-          format: uri
           description: |
-            The uri of the included value set.
+            The namespace of the referred value set.
+        name:
+          type: string
+          description: |
+            The name of the referred value set.
         data:
           $ref: '#/components/schemas/ValueSetDefinitionData'
         expression:
