[#10446] ValueSetApi - domain and basic Api

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -260,6 +260,8 @@ components:
         enabled:
           type: boolean
           default: true
+        valueSet:
+          type: ValueSetData
     ViewState:
       type: string
       enum:
