--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -20,6 +20,7 @@ smartbit4all {
     	"LocalTime": "java.time.LocalTime",
     	"UiAction": "org.smartbit4all.api.view.bean.UiAction",
   		"Value": "org.smartbit4all.api.value.bean.Value",
+  		"ValueSetData": "org.smartbit4all.api.value.bean.ValueSetData",
   		"FilterExpressionOrderBy": "org.smartbit4all.api.filterexpression.bean.FilterExpressionOrderBy",
   		"FilterExpressionBuilderModel": "org.smartbit4all.api.filterexpression.bean.FilterExpressionBuilderModel",
   		"PropertyDefinitionData": "org.smartbit4all.api.object.bean.PropertyDefinitionData",
