[#10466] create ObjectContainer for storing objects without URI

--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -318,3 +318,12 @@ components:
           type: string
         typeClass:
           type: string
+    ObjectContainer:
+      type: object
+      required: [uri]
+      properties:
+        uri:
+          type: string
+          format: uri
+        data:
+          type: object
