[#10613] add ability to keep model when view is closed implicitly

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -246,6 +246,8 @@ components:
           additionalProperties: 
             type: string
             format: uri
+        keepModelOnImplicitClose:
+          type: boolean
     ViewData:
       type: object
       required: [uuid,viewName,state,type]
