[#10612] view api and formdefinition api updates

--- a/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
+++ b/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
@@ -37,6 +37,9 @@ components:
         - TEXT_FIELD_NUMBER
         - TIME
         - TOGGLE
+        - IMAGE
+        - FILE_UPLOADER
+        - MEDIA
     SmartLayoutDefinition:
       type: object
       required: [widgets]
