--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -553,6 +553,9 @@ components:
         - FLAT
         - STROKED
         - RAISED
+        - ICON
+        - MINI_FAB
+        - FAB
     UiActionButtonIconPos:
       type: string
       description: |
