[#10547] button and divider added to SmartFormWidgetType in formdefinition-api.yaml

--- a/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
+++ b/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
@@ -40,6 +40,8 @@ components:
         - IMAGE
         - FILE_UPLOADER
         - MEDIA
+        - BUTTON
+        - DIVIDER
     SmartLayoutDefinition:
       type: object
       required: [widgets]
