--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.1
+openapi: 3.0.3
 info:
   title: Object api
   description: |
@@ -61,13 +61,7 @@ components:
         The reference definition is a directed navigation between objects. Its name is unique inside the source object that can have only one
         outgoing reference with the same name. In the target object the source object and the name is unique together but the name itself is not
         enough to identify an incoming reference.
-      required: 
-      - "uri"
-      - sourceObjectName
-      - propertyPath
-      - targetObjectName
-      - aggregation
-      - multiplicity
+      required: [uri, sourceObjectName, propertyPath, aggregation, multiplicity] 
       properties:
         uri:
           type: string
@@ -75,7 +69,7 @@ components:
           description: |
             The storage identifier of the given definition. It is calculated by the qualified name of the object and the name name of the
             reference. For example object:/com/smartbit4all/mydomain/model/MyObject/firstReference could be a calculated URI for a given reference.
-            By deafult it could be a good idea to name the reference by the name of the property that contains the reference value.
+            By default it could be a good idea to name the reference by the name of the property that contains the reference value.
         backReference:
           type: string
           format: uri
@@ -94,6 +88,10 @@ components:
         targetObjectName:
           type: string
           description: The name of the target object.
+        targetValueSet:
+          type: string
+          format: uri
+          description: If the given reference points to a value set then this uri contains the reference.
         aggregation:
           $ref: '#/components/schemas/AggregationKind'
         propertyKind:
