--- a/api-domain/src/main/resources/descriptors/filterexpression-api.yaml
+++ b/api-domain/src/main/resources/descriptors/filterexpression-api.yaml
@@ -127,10 +127,19 @@ components:
         subFieldList:
           $ref: "#/components/schemas/FilterExpressionFieldList"
 
+    FilterExpressionBuilder:
+      type: object
+      properties:
+        uri:
+          type: string
+          format: uri
+        data:
+          $ref: "#/components/schemas/FilterExpressionBuilderModel"
+
     FilterExpressionBuilderModel:
       type: object
       description: |
-        The filter field model contains a list of groups that form a tree structure for the available filter fields. It contains
+        The filter field model data contains a list of groups that form a tree structure for the available filter fields. It contains
         the groups of available fields and the workplace root list that conatins the already added filters. On the builder side 
         we refer the unique identifiers of the field lists and fields.
       properties:
