--- a/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
+++ b/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
@@ -42,6 +42,7 @@ components:
         - MEDIA
         - BUTTON
         - DIVIDER
+        - COMPONENT
     SmartLayoutDefinition:
       type: object
       required: [widgets]
