[#11134] add RICH_TEXT widget type to formdefinition

--- a/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
+++ b/api-domain/src/main/resources/descriptors/formdefinition-api.yaml
@@ -43,6 +43,7 @@ components:
         - BUTTON
         - DIVIDER
         - COMPONENT
+        - RICH_TEXT
     SmartLayoutDefinition:
       type: object
       required: [widgets]
