[#10908] add modifier to FilterExpressionData

--- a/api-domain/src/main/resources/descriptors/filterexpression-api.yaml
+++ b/api-domain/src/main/resources/descriptors/filterexpression-api.yaml
@@ -64,6 +64,8 @@ components:
         currentOperation:
           $ref: "#/components/schemas/FilterExpressionOperation"
           default: 'EQUAL'
+        modifier:
+          type: string
         boolOperator:
           $ref: "#/components/schemas/FilterExpressionBoolOperator"
           default: 'AND'
